--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         .product img {
             width: 150px;
             height: 150px;
+            border-radius: 5px;
         }
         footer {
             text-align: center;
@@ -90,21 +91,21 @@
             <div class="product-grid">
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=laptop" target="_blank">
-                        <img src="laptop image.jpeg" alt="Laptop">
+                        <img src="https://m.media-amazon.com/images/I/61PqVqVYf2L._AC_UF1000,1000_QL80_.jpg" alt="Laptop">
                     </a>
                     <p>Laptop</p>
                     <p>₹50,000</p>
                 </div>
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=earphones" target="_blank">
-                        <img src="earphone image.jpg" alt="Earphones">
+                        <img src="https://m.media-amazon.com/images/I/61+Q6Rh3OQL._AC_UF1000,1000_QL80_.jpg" alt="Earphones">
                     </a>
                     <p>Earphones</p>
                     <p>₹1,500</p>
                 </div>
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=tv" target="_blank">
-                        <img src="tv image.webp" alt="TV">
+                        <img src="https://m.media-amazon.com/images/I/81nC3FlwDHL._AC_UF1000,1000_QL80_.jpg" alt="TV">
                     </a>
                     <p>Television</p>
                     <p>₹30,000</p>
@@ -117,14 +118,14 @@
             <div class="product-grid">
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=shirt" target="_blank">
-                        <img src="casual-shirt.jpg" alt="Shirt">
+                        <img src="https://m.media-amazon.com/images/I/91wzQ37wvOL._AC_UF1000,1000_QL80_.jpg" alt="Shirt">
                     </a>
                     <p>Shirt</p>
                     <p>₹999</p>
                 </div>
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=jeans" target="_blank">
-                        <img src="jeans.webp" alt="Jeans">
+                        <img src="https://m.media-amazon.com/images/I/71bJUbkI6HL._AC_UF1000,1000_QL80_.jpg" alt="Jeans">
                     </a>
                     <p>Jeans</p>
                     <p>₹1,499</p>
@@ -137,14 +138,14 @@
             <div class="product-grid">
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=rice" target="_blank">
-                        <img src="rice.jpg" alt="Rice">
+                        <img src="https://m.media-amazon.com/images/I/71j1Wk4tghL._AC_UF1000,1000_QL80_.jpg" alt="Rice">
                     </a>
                     <p>Rice</p>
                     <p>₹500</p>
                 </div>
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=cooking+oil" target="_blank">
-                        <img src="cooking oil.jpeg" alt="Cooking Oil">
+                        <img src="https://m.media-amazon.com/images/I/51q1syc-fXL._AC_UF1000,1000_QL80_.jpg" alt="Cooking Oil">
                     </a>
                     <p>Cooking Oil</p>
                     <p>₹250</p>
@@ -157,3 +158,4 @@
     </footer>
 </body>
 </html>
+
