--- a/index.html
+++ b/index.html
@@ -91,21 +91,21 @@
             <div class="product-grid">
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=laptop" target="_blank">
-                        <img src="https://m.media-amazon.com/images/I/61PqVqVYf2L._AC_UF1000,1000_QL80_.jpg" alt="Laptop">
+                        <img src="https://source.unsplash.com/150x150/?laptop" alt="Laptop">
                     </a>
                     <p>Laptop</p>
                     <p>₹50,000</p>
                 </div>
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=earphones" target="_blank">
-                        <img src="https://m.media-amazon.com/images/I/61+Q6Rh3OQL._AC_UF1000,1000_QL80_.jpg" alt="Earphones">
+                        <img src="https://source.unsplash.com/150x150/?earphone" alt="Earphones">
                     </a>
                     <p>Earphones</p>
                     <p>₹1,500</p>
                 </div>
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=tv" target="_blank">
-                        <img src="https://m.media-amazon.com/images/I/81nC3FlwDHL._AC_UF1000,1000_QL80_.jpg" alt="TV">
+                        <img src="https://source.unsplash.com/150x150/?tv" alt="TV">
                     </a>
                     <p>Television</p>
                     <p>₹30,000</p>
@@ -118,14 +118,14 @@
             <div class="product-grid">
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=shirt" target="_blank">
-                        <img src="https://m.media-amazon.com/images/I/91wzQ37wvOL._AC_UF1000,1000_QL80_.jpg" alt="Shirt">
+                        <img src="https://source.unsplash.com/150x150/?shirt" alt="Shirt">
                     </a>
                     <p>Shirt</p>
                     <p>₹999</p>
                 </div>
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=jeans" target="_blank">
-                        <img src="https://m.media-amazon.com/images/I/71bJUbkI6HL._AC_UF1000,1000_QL80_.jpg" alt="Jeans">
+                        <img src="https://source.unsplash.com/150x150/?jeans" alt="Jeans">
                     </a>
                     <p>Jeans</p>
                     <p>₹1,499</p>
@@ -138,14 +138,14 @@
             <div class="product-grid">
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=rice" target="_blank">
-                        <img src="https://m.media-amazon.com/images/I/71j1Wk4tghL._AC_UF1000,1000_QL80_.jpg" alt="Rice">
+                        <img src="https://source.unsplash.com/150x150/?rice" alt="Rice">
                     </a>
                     <p>Rice</p>
                     <p>₹500</p>
                 </div>
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=cooking+oil" target="_blank">
-                        <img src="https://m.media-amazon.com/images/I/51q1syc-fXL._AC_UF1000,1000_QL80_.jpg" alt="Cooking Oil">
+                        <img src="https://source.unsplash.com/150x150/?cooking-oil" alt="Cooking Oil">
                     </a>
                     <p>Cooking Oil</p>
                     <p>₹250</p>
