--- a/index.html
+++ b/index.html
@@ -91,21 +91,21 @@
             <div class="product-grid">
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=laptop" target="_blank">
-                        <img src="https://source.unsplash.com/150x150/?laptop" alt="Laptop">
+                        <img src="https://imgur.com/a/qdHBvJu" alt="Laptop">
                     </a>
                     <p>Laptop</p>
                     <p>₹50,000</p>
                 </div>
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=earphones" target="_blank">
-                        <img src="https://source.unsplash.com/150x150/?earphone" alt="Earphones">
+                        <img src="https://imgur.com/a/shZzpjD" alt="Earphones">
                     </a>
                     <p>Earphones</p>
                     <p>₹1,500</p>
                 </div>
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=tv" target="_blank">
-                        <img src="https://source.unsplash.com/150x150/?tv" alt="TV">
+                        <img src="https://imgur.com/a/gcmDv5Flt="TV">
                     </a>
                     <p>Television</p>
                     <p>₹30,000</p>
@@ -118,14 +118,14 @@
             <div class="product-grid">
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=shirt" target="_blank">
-                        <img src="https://source.unsplash.com/150x150/?shirt" alt="Shirt">
+                        <img src="https://imgur.com/a/93MEETs" alt="Shirt">
                     </a>
                     <p>Shirt</p>
                     <p>₹999</p>
                 </div>
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=jeans" target="_blank">
-                        <img src="https://source.unsplash.com/150x150/?jeans" alt="Jeans">
+                        <img src="https://imgur.com/a/Rg7mvMI" alt="Jeans">
                     </a>
                     <p>Jeans</p>
                     <p>₹1,499</p>
@@ -138,14 +138,14 @@
             <div class="product-grid">
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=rice" target="_blank">
-                        <img src="https://source.unsplash.com/150x150/?rice" alt="Rice">
+                        <img src="https://imgur.com/a/eXx35cE" alt="Rice">
                     </a>
                     <p>Rice</p>
                     <p>₹500</p>
                 </div>
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=cooking+oil" target="_blank">
-                        <img src="https://source.unsplash.com/150x150/?cooking-oil" alt="Cooking Oil">
+                        <img src="https://imgur.com/a/96a1Lrl" alt="Cooking Oil">
                     </a>
                     <p>Cooking Oil</p>
                     <p>₹250</p>
