--- a/index.html
+++ b/index.html
@@ -91,21 +91,21 @@
             <div class="product-grid">
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=laptop" target="_blank">
-                        <img src="https://imgur.com/a/qdHBvJu" alt="Laptop">
+                        <img src="https://i.imgur.com/aUrYpPR_d.jpeg?maxwidth=520&shape=thumb&fidelity=high" alt="Laptop">
                     </a>
                     <p>Laptop</p>
                     <p>₹50,000</p>
                 </div>
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=earphones" target="_blank">
-                        <img src="https://imgur.com/a/shZzpjD" alt="Earphones">
+                        <img src="https://i.imgur.com/GC9pN6o_d.jpeg?maxwidth=520&shape=thumb&fidelity=high" alt="Earphones">
                     </a>
                     <p>Earphones</p>
                     <p>₹1,500</p>
                 </div>
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=tv" target="_blank">
-                        <img src="https://imgur.com/a/gcmDv5Flt="TV">
+                        <img src="https://i.imgur.com/ypuzXAr_d.jpeg?maxwidth=520&shape=thumb&fidelity=high" alt="TV">
                     </a>
                     <p>Television</p>
                     <p>₹30,000</p>
@@ -118,14 +118,14 @@
             <div class="product-grid">
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=shirt" target="_blank">
-                        <img src="https://imgur.com/a/93MEETs" alt="Shirt">
+                        <img src="https://i.imgur.com/Xa6Djoh_d.jpeg?maxwidth=520&shape=thumb&fidelity=high" alt="Shirt">
                     </a>
                     <p>Shirt</p>
                     <p>₹999</p>
                 </div>
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=jeans" target="_blank">
-                        <img src="https://imgur.com/a/Rg7mvMI" alt="Jeans">
+                        <img src="https://i.imgur.com/07U3ESG_d.jpeg?maxwidth=520&shape=thumb&fidelity=high" alt="Jeans">
                     </a>
                     <p>Jeans</p>
                     <p>₹1,499</p>
@@ -138,14 +138,14 @@
             <div class="product-grid">
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=rice" target="_blank">
-                        <img src="https://imgur.com/a/eXx35cE" alt="Rice">
+                        <img src="https://i.imgur.com/BZJmSa4.jpeg" alt="Rice">
                     </a>
                     <p>Rice</p>
                     <p>₹500</p>
                 </div>
                 <div class="product">
                     <a href="https://www.flipkart.com/search?q=cooking+oil" target="_blank">
-                        <img src="https://imgur.com/a/96a1Lrl" alt="Cooking Oil">
+                        <img src="https://i.imgur.com/snEEA7M.jpeg" alt="Cooking Oil">
                     </a>
                     <p>Cooking Oil</p>
                     <p>₹250</p>
